# AZR

./: CMakeLists.txt  main.cpp
ImageLoader/: stb_image.cpp  stb_image.h
Shader/: Shader.cpp  Shader.h
shaders/: init.frag  init.vert  lightSource.frag  lightSource.vert
